--- a/production/sfbay/smart/AFI-SCHT20050MN-scarce.conf
+++ b/production/sfbay/smart/AFI-SCHT20050MN-scarce.conf
@@ -14,7 +14,7 @@ beam.agentsim.simulationName = "AFI-SCHT20050MN-scarce"
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.2
 #beam.agentsim.numAgents = 10
 beam.agentsim.firstIteration = 0
-beam.agentsim.lastIteration = 1
+beam.agentsim.lastIteration = 0
 beam.agentsim.schedulerParallelismWindow = 300
 beam.agentsim.thresholdForWalkingInMeters = 100
 beam.agentsim.startTime = "00:00:00"
@@ -230,7 +230,7 @@ beam.outputs.addTimestampToOutputDirectory = true
 beam.outputs.events.fileOutputFormats = "csv.gz" # valid options: xml(.gz) , csv(.gz), none - DEFAULT: csv.gz
 
 # Events Writing Logging Levels:
-beam.outputs.events.eventsToWrite = "PathTraversalEvent,RefuelSessionEvent"
+beam.outputs.events.eventsToWrite = "ActivityEndEvent,ActivityStartEvent,PersonEntersVehicleEvent,PersonLeavesVehicleEvent,ModeChoiceEvent,PathTraversalEvent,ReserveRideHailEvent,RefuelEvent"
 beam.outputs.stats.binSize = 3600
 
 # To keep all logging params in one place, BEAM overrides MATSim params normally in the controller config module
