--- a/production/sfbay/smart/smart-baseline.conf
+++ b/production/sfbay/smart/smart-baseline.conf
@@ -64,6 +64,8 @@ beam.agentsim.agents.modalBehaviors.lowTimeSensitivity.highCongestion.nonHighway
 beam.agentsim.agents.modalBehaviors.lowTimeSensitivity.lowCongestion.highwayFactor.LevelLE2 = 0.9
 beam.agentsim.agents.modalBehaviors.lowTimeSensitivity.lowCongestion.nonHighwayFactor.LevelLE2 = 1.0
 
+beam.agentsim.agents.parking.mulitnomialLogit.params.installed_capacity_multiplier=1.0
+
 beam.agentsim.agents.modalBehaviors.lccm.paramFilePath = ${beam.inputDirectory}"/../lccm-long.csv"
 beam.agentsim.agents.plans {
   inputPlansFilePath = ${beam.inputDirectory}"/../samples/population.xml.gz"
