--- a/production/sfbay/smart/smart-baseline.conf
+++ b/production/sfbay/smart/smart-baseline.conf
@@ -252,7 +252,7 @@ beam.physsim.writeEventsInterval = ${beam.outputs.defaultWriteInterval}
 beam.physsim.writePlansInterval = ${beam.outputs.defaultWriteInterval}
 beam.physsim.linkStatsWriteInterval = ${beam.outputs.defaultWriteInterval}
 beam.outputs.generalizedLinkStatsInterval = ${beam.outputs.defaultWriteInterval}
-
+beam.agentsim.agents.parking.maxSearchRadius = 100000.0
 beam.outputs.generalizedLinkStats.startTime = 0
 beam.outputs.generalizedLinkStats.endTime = 108000
 ##################################################################
