--- a/production/sfbay/smart/smart-b-lowtech.conf
+++ b/production/sfbay/smart/smart-b-lowtech.conf
@@ -10,11 +10,11 @@ include "../../common/matsim.conf"
 ##################################################################
 # Agentsim
 ##################################################################
-beam.agentsim.simulationName = "sfbay-smart-b-lt"
-beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.1
+beam.agentsim.simulationName = "sfbay-smart-b-lt/review-rh-enroute"
+beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.025
 #beam.agentsim.numAgents = 10
 beam.agentsim.firstIteration = 0
-beam.agentsim.lastIteration = 50
+beam.agentsim.lastIteration = 0
 beam.agentsim.schedulerParallelismWindow = 300
 beam.agentsim.thresholdForWalkingInMeters = 100
 beam.agentsim.startTime = "00:00:00"
@@ -170,9 +170,6 @@ beam.agentsim.agents.rideHail.allocationManager.name="POOLING_ALONSO_MORA"
 beam.agentsim.agents.rideHail.allocationManager.repositionTimeoutInSeconds = 0
 beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 301
 beam.agentsim.agents.rideHail.allocationManager.randomRepositioning.repositioningShare=0.2
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.pickupTimeWindowInSec=180
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.dropoffTimeWindowInSec=300
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxRequestsPerVehicle=2
 beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.percentageOfVehiclesToReposition=0.005
 beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.timeWindowSizeInSecForDecidingAboutRepositioning=1200
 beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.allowIncreasingRadiusIfDemandInRadiusLow=true
@@ -185,6 +182,10 @@ beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.distan
 beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.waitingTimeWeight=4.0
 beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.demandWeight=4.0
 beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.produceDebugImages=true
+# alonso mora
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.pickupTimeWindowInSec=480
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.dropoffTimeWindowInSec=0.20
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxRequestsPerVehicle=10
 
 ##################################################################
 # Metrics
@@ -259,10 +260,10 @@ beam.agentsim.scheduleMonitorTask.initialDelay = 10
 beam.agentsim.scheduleMonitorTask.interval = 300
 
 beam.debug.stuckAgentDetection {
-  enabled = true
+  enabled = false
   defaultTimeoutMs="900s"
   checkIntervalMs = "1000ms"
-  checkMaxNumberOfMessagesEnabled = true
+  checkMaxNumberOfMessagesEnabled = false
   overallSimulationTimeoutMs="600s"
   thresholds = [
     {
