--- a/production/sfbay/smart/smart-b-lowtech.conf
+++ b/production/sfbay/smart/smart-b-lowtech.conf
@@ -92,7 +92,7 @@ beam.agentsim.agents.vehicles.enableNewVehicleEnergyConsumptionLogic = true
 beam.agentsim.agents.vehicles.fractionOfInitialVehicleFleet = 0.465
 #TAZ params
 beam.agentsim.taz.filePath=${beam.inputDirectory}"/../taz-centers.csv"
-beam.agentsim.taz.parkingFilePath = ${beam.inputDirectory}"/../parking/taz-parking-rich-50.csv"
+beam.agentsim.taz.parkingFilePath = ${beam.inputDirectory}"/../parking/taz-parking.csv"
 # Scaling and Tuning Params
 beam.agentsim.tuning.transitCapacity = 0.22080797450913886
 beam.agentsim.tuning.transitPrice = 1.0
@@ -104,7 +104,7 @@ beam.agentsim.populationAdjustment="DEFAULT_ADJUSTMENT"
 # Physsim
 ###########################
 beam.physsim.inputNetworkFilePath = ${beam.inputDirectory}"/../r5-simple-no-local/physsim-network.xml"
-beam.physsim.flowCapacityFactor = 0.15
+beam.physsim.flowCapacityFactor = 0.3
 beam.physsim.storageCapacityFactor = 1.75
 beam.physsim.writeMATSimNetwork = true
 beam.physsim.ptSampleSize = 0.03
@@ -145,17 +145,13 @@ beam.agentsim.agents.rideHail.initialization.initType = "PROCEDURAL"
 # initialLocation(HOME | UNIFORM_RANDOM | ALL_AT_CENTER | ALL_IN_CORNER)
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.name = "RANDOM_ACTIVITY"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.home.radiusInMeters = 500
-beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.147
-beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="conv-L1-inc133-TechTakeover-LowTech"
+beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.098
+beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="RH_Conventional-Car_L1"
 
 # If FILE, use this param
 beam.agentsim.agents.rideHail.initialization.filename=${beam.inputDirectory}"/../rideHailFleet.csv"
-beam.agentsim.agents.rideHail.defaultBaseCost=1.8
-beam.agentsim.agents.rideHail.defaultCostPerMile=0.91
-beam.agentsim.agents.rideHail.defaultCostPerMinute=0.28
-beam.agentsim.agents.rideHail.pooledBaseCost=1.89
-beam.agentsim.agents.rideHail.pooledCostPerMile=1.11
-beam.agentsim.agents.rideHail.pooledCostPerMinute=0.07
+beam.agentsim.agents.rideHail.defaultCostPerMile=1.25
+beam.agentsim.agents.rideHail.defaultCostPerMinute=0.75
 beam.agentsim.agents.rideHail.refuelThresholdInMeters=1000.0
 beam.agentsim.agents.rideHail.rideHailManager.radiusInMeters=5000
 beam.agentsim.agents.rideHail.iterationStats.timeBinSizeInSec=3600
