--- a/production/sfbay/smart/smart-b-lowtech.conf
+++ b/production/sfbay/smart/smart-b-lowtech.conf
@@ -92,7 +92,7 @@ beam.agentsim.agents.vehicles.enableNewVehicleEnergyConsumptionLogic = true
 beam.agentsim.agents.vehicles.fractionOfInitialVehicleFleet = 0.465
 #TAZ params
 beam.agentsim.taz.filePath=${beam.inputDirectory}"/../taz-centers.csv"
-beam.agentsim.taz.parkingFilePath = ${beam.inputDirectory}"/../parking/taz-parking.csv"
+beam.agentsim.taz.parkingFilePath = ${beam.inputDirectory}"/../parking/taz-parking-rich-50.csv"
 # Scaling and Tuning Params
 beam.agentsim.tuning.transitCapacity = 0.22080797450913886
 beam.agentsim.tuning.transitPrice = 1.0
@@ -146,7 +146,7 @@ beam.agentsim.agents.rideHail.initialization.initType = "PROCEDURAL"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.name = "RANDOM_ACTIVITY"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.home.radiusInMeters = 500
 beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.098
-beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="RH_Conventional-Car_L1"
+beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="conv-L1-inc133-TechTakeover-LowTech"
 
 # If FILE, use this param
 beam.agentsim.agents.rideHail.initialization.filename=${beam.inputDirectory}"/../rideHailFleet.csv"
