--- a/production/sfbay/smart/smart-b-lowtech.conf
+++ b/production/sfbay/smart/smart-b-lowtech.conf
@@ -10,7 +10,7 @@ include "../../common/matsim.conf"
 ##################################################################
 # Agentsim
 ##################################################################
-beam.agentsim.simulationName = "sfbay-smart-b-lt/review-rh-enroute-fleet-high"
+beam.agentsim.simulationName = "sfbay-smart-b-lt/review-rh-enroute-base-nopool"
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.025
 #beam.agentsim.numAgents = 10
 beam.agentsim.firstIteration = 0
@@ -31,7 +31,7 @@ beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_transit_interce
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.drive_transit_intercept = -1.75
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_transit_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_intercept = 2.5
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = -2.0
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_intercept = 5.75
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.bike_intercept = -3.0
 beam.agentsim.agents.modalBehaviors.modeVotMultiplier.CAV = 0.35 // Does not effect mode choice
@@ -145,7 +145,7 @@ beam.agentsim.agents.rideHail.initialization.initType = "PROCEDURAL"
 # initialLocation(HOME | UNIFORM_RANDOM | ALL_AT_CENTER | ALL_IN_CORNER)
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.name = "RANDOM_ACTIVITY"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.home.radiusInMeters = 500
-beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.147
+beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.098
 beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="conv-L1-inc133-TechTakeover-LowTech"
 
 # If FILE, use this param
@@ -162,7 +162,7 @@ beam.agentsim.agents.rideHail.surgePricing.minimumSurgeLevel=0.1
 # priceAdjustmentStrategy(KEEP_PRICE_LEVEL_FIXED_AT_ONE | CONTINUES_DEMAND_SUPPLY_MATCHING)
 beam.agentsim.agents.rideHail.surgePricing.priceAdjustmentStrategy="KEEP_PRICE_LEVEL_FIXED_AT_ONE"
 # allocationManager(DEFAULT_MANAGER | STANFORD_V1 | BUFFERED_IMPL_TEMPLATE | RANDOM_REPOSITIONING | REPOSITIONING_LOW_WAITING_TIMES | DUMMY_DISPATCH_WITH_BUFFERING | POOLING_ALONSO_MORA)
-beam.agentsim.agents.rideHail.allocationManager.name="POOLING_ALONSO_MORA"
+beam.agentsim.agents.rideHail.allocationManager.name="DEFAULT_MANAGER"
 beam.agentsim.agents.rideHail.allocationManager.repositionTimeoutInSeconds = 0
 beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 301
 beam.agentsim.agents.rideHail.allocationManager.randomRepositioning.repositioningShare=0.2
