--- a/test/input/sf-light/sf-light-10k.conf
+++ b/test/input/sf-light/sf-light-10k.conf
@@ -9,14 +9,18 @@ include "../common/matsim.conf"
 # Agentsim
 ##################################################################
 beam.agentsim.simulationName = "sf-light-10k-xml"
-beam.agentsim.agentSampleSizeAsFractionOfPopulation = 1.0
+beam.agentsim.agentSampleSizeAsFractionOfPopulation = 1
 beam.agentsim.firstIteration = 0
-beam.agentsim.lastIteration = 1
+beam.agentsim.lastIteration = 2
 beam.agentsim.thresholdForWalkingInMeters = 100
 beam.agentsim.timeBinSize = 3600
 beam.agentsim.startTime = "00:00:00"
 beam.agentsim.endTime = "30:00:00"
 beam.agentsim.schedulerParallelismWindow = 30
+
+#beam.physsim.jdeqsim.cacc.enabled = true
+#beam.physsim.jdeqsim.cacc.speedAdjustmentFactor = 0.1
+
 # MODE CHOICE OPTIONS:
 # ModeChoiceMultinomialLogit ModeChoiceTransitIfAvailable ModeChoiceDriveIfAvailable ModeChoiceRideHailIfAvailable
 # ModeChoiceUniformRandom
@@ -47,7 +51,7 @@ beam.agentsim.agents.households {
 beam.agentsim.agents.vehicles.linkToGradePercentFilePath = ${beam.inputDirectory}"/r5/linkToGradePercent.csv"
 beam.agentsim.agents.vehicles.fuelTypesFilePath = ${beam.inputDirectory}"/beamFuelTypes.csv"
 beam.agentsim.agents.vehicles.vehicleTypesFilePath = ${beam.inputDirectory}"/vehicleTypes.csv"
-beam.agentsim.agents.vehicles.vehiclesFilePath = ${beam.inputDirectory}"/sample/10k/vehicles-cav-all.csv"
+beam.agentsim.agents.vehicles.vehiclesFilePath = ${beam.inputDirectory}"/sample/10k/vehicles-cav-all.csv" #sample/10k/vehicles-cav-half.csv"
 beam.agentsim.agents.vehicles.sharedFleets = []
 #TAZ params
 beam.agentsim.taz.filePath=${beam.inputDirectory}"/taz-centers.csv.gz"
@@ -67,16 +71,16 @@ beam.agentsim.tuning.rideHailPrice = 1.0
 # Physsim
 ###########################
 beam.physsim.inputNetworkFilePath = ${beam.inputDirectory}"/r5/physsim-network.xml"
-beam.physsim.flowCapacityFactor = 0.01
+beam.physsim.flowCapacityFactor = 0.0000001 #0.01
 beam.physsim.storageCapacityFactor = 1.0
-beam.physsim.writeEventsInterval = 0
+beam.physsim.writeEventsInterval = 1
 beam.physsim.writePlansInterval = 0
-beam.physsim.writeMATSimNetwork = false
+beam.physsim.writeMATSimNetwork = true
 beam.physsim.linkStatsWriteInterval = 1
 beam.physsim.linkStatsBinSize = 3600
 beam.physsim.ptSampleSize = 0.03
 beam.physsim.jdeqsim.agentSimPhysSimInterfaceDebugger.enabled = false
-beam.physsim.skipPhysSim = true
+beam.physsim.skipPhysSim = false
 
 ###########################
 # Replanning
