--- a/production/sfbay/smart/smart-b-lowtech.conf
+++ b/production/sfbay/smart/smart-b-lowtech.conf
@@ -10,11 +10,11 @@ include "../../common/matsim.conf"
 ##################################################################
 # Agentsim
 ##################################################################
-beam.agentsim.simulationName = "sfbay-smart-b-lt/review-rh-enroute-rpv-high"
-beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.025
+beam.agentsim.simulationName = "sfbay-smart-b-lt/review-rh-base"
+beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.1
 #beam.agentsim.numAgents = 10
 beam.agentsim.firstIteration = 0
-beam.agentsim.lastIteration = 0
+beam.agentsim.lastIteration = 50
 beam.agentsim.schedulerParallelismWindow = 300
 beam.agentsim.thresholdForWalkingInMeters = 100
 beam.agentsim.startTime = "00:00:00"
@@ -104,7 +104,7 @@ beam.agentsim.populationAdjustment="DEFAULT_ADJUSTMENT"
 # Physsim
 ###########################
 beam.physsim.inputNetworkFilePath = ${beam.inputDirectory}"/../r5-simple-no-local/physsim-network.xml"
-beam.physsim.flowCapacityFactor = 0.3
+beam.physsim.flowCapacityFactor = 0.15
 beam.physsim.storageCapacityFactor = 1.75
 beam.physsim.writeMATSimNetwork = true
 beam.physsim.ptSampleSize = 0.03
@@ -150,8 +150,12 @@ beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="conv-L1-i
 
 # If FILE, use this param
 beam.agentsim.agents.rideHail.initialization.filename=${beam.inputDirectory}"/../rideHailFleet.csv"
-beam.agentsim.agents.rideHail.defaultCostPerMile=1.25
-beam.agentsim.agents.rideHail.defaultCostPerMinute=0.75
+beam.agentsim.agents.rideHail.defaultBaseCost=1.8
+beam.agentsim.agents.rideHail.defaultCostPerMile=0.91
+beam.agentsim.agents.rideHail.defaultCostPerMinute=0.28
+beam.agentsim.agents.rideHail.pooledBaseCost=1.89
+beam.agentsim.agents.rideHail.pooledCostPerMile=1.11
+beam.agentsim.agents.rideHail.pooledCostPerMinute=0.07
 beam.agentsim.agents.rideHail.refuelThresholdInMeters=1000.0
 beam.agentsim.agents.rideHail.rideHailManager.radiusInMeters=5000
 beam.agentsim.agents.rideHail.iterationStats.timeBinSizeInSec=3600
@@ -181,7 +185,11 @@ beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.produc
 # alonso mora
 beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec=480
 beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFraction=0.25
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.solutionSpaceSizePerVehicle=15
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.solutionSpaceSizePerVehicle=10
+
+beam.beamskimmer.writeObservedSkims = false
+beam.beamskimmer.writeAllModeSkimsForPeakNonPeakPeriods = false
+beam.beamskimmer.writeObservedSkimsPlus = false
 
 ##################################################################
 # Metrics
