--- a/production/sfbay/smart/sblt-nopooling-baseline.conf
+++ b/production/sfbay/smart/sblt-nopooling-baseline.conf
@@ -10,12 +10,26 @@ include "../../common/matsim.conf"
 ##################################################################
 # Agentsim
 ##################################################################
-beam.agentsim.simulationName = "sfbay-smart-b-lt"
-beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.1
-#beam.agentsim.numAgents = 10
-beam.agentsim.firstIteration = 0
-beam.agentsim.lastIteration = 15
+############# VARIABLES
+beam.agentsim.simulationName = "sblt-pooling-baseline"
+beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.025
 beam.agentsim.schedulerParallelismWindow = 300
+beam.agentsim.lastIteration = 0
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = 0
+beam.agentsim.agents.rideHail.allocationManager.name="DEFAULT_MANAGER"
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 480
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFraction = 0.20
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.solutionSpaceSizePerVehicle = 10
+beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.098
+beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 301
+
+
+############ CONSTANTS
+beam.beamskimmer.writeObservedSkims = false
+beam.beamskimmer.writeAllModeSkimsForPeakNonPeakPeriods = false
+beam.beamskimmer.writeObservedSkimsPlus = false
+
+beam.agentsim.firstIteration = 0
 beam.agentsim.thresholdForWalkingInMeters = 100
 beam.agentsim.startTime = "00:00:00"
 beam.agentsim.endTime = "30:00:00"
@@ -31,7 +45,6 @@ beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_transit_interce
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.drive_transit_intercept = -1.75
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_transit_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_intercept = 2.5
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = 0.8
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_intercept = 5.75
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.bike_intercept = -3.0
 beam.agentsim.agents.modalBehaviors.modeVotMultiplier.CAV = 0.35 // Does not effect mode choice
@@ -145,7 +158,6 @@ beam.agentsim.agents.rideHail.initialization.initType = "PROCEDURAL"
 # initialLocation(HOME | UNIFORM_RANDOM | ALL_AT_CENTER | ALL_IN_CORNER)
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.name = "RANDOM_ACTIVITY"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.home.radiusInMeters = 500
-beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.098
 beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="conv-L1-inc133-TechTakeover-LowTech"
 
 # If FILE, use this param
@@ -166,9 +178,9 @@ beam.agentsim.agents.rideHail.surgePricing.minimumSurgeLevel=0.1
 # priceAdjustmentStrategy(KEEP_PRICE_LEVEL_FIXED_AT_ONE | CONTINUES_DEMAND_SUPPLY_MATCHING)
 beam.agentsim.agents.rideHail.surgePricing.priceAdjustmentStrategy="KEEP_PRICE_LEVEL_FIXED_AT_ONE"
 # allocationManager(DEFAULT_MANAGER | STANFORD_V1 | BUFFERED_IMPL_TEMPLATE | RANDOM_REPOSITIONING | REPOSITIONING_LOW_WAITING_TIMES | DUMMY_DISPATCH_WITH_BUFFERING | POOLING_ALONSO_MORA)
-beam.agentsim.agents.rideHail.allocationManager.name="POOLING_ALONSO_MORA"
+
 beam.agentsim.agents.rideHail.allocationManager.repositionTimeoutInSeconds = 0
-beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 301
+
 beam.agentsim.agents.rideHail.allocationManager.randomRepositioning.repositioningShare=0.2
 beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.percentageOfVehiclesToReposition=0.005
 beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.timeWindowSizeInSecForDecidingAboutRepositioning=1200
