--- a/production/sfbay/smart/sblt-nopooling-baseline.conf
+++ b/production/sfbay/smart/sblt-nopooling-baseline.conf
@@ -11,7 +11,7 @@ include "../../common/matsim.conf"
 # Agentsim
 ##################################################################
 ############# VARIABLES
-beam.agentsim.simulationName = "sblt-pooling-baseline"
+beam.agentsim.simulationName = "sblt-nopooling-baseline"
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.025
 beam.agentsim.schedulerParallelismWindow = 300
 beam.agentsim.lastIteration = 0
