sblt scenarios set

--- a/production/sfbay/smart/smart-b-lowtech-pooling/sblt-baseline.conf
+++ b/production/sfbay/smart/smart-b-lowtech-pooling/sblt-baseline.conf
@@ -1,5 +1,5 @@
 
-include "smart-b-lowtech.conf"
+include "../smart-b-lowtech.conf"
 
 ############# VARIABLES
 beam.agentsim.simulationName = "sblt-pooling-baseline"
