--- a/production/sfbay/smart/smart-b-lowtech-pooling/sblt-baseline.conf
+++ b/production/sfbay/smart/smart-b-lowtech-pooling/sblt-baseline.conf
@@ -2,7 +2,7 @@
 include "../smart-b-lowtech.conf"
 
 ############# VARIABLES
-beam.agentsim.simulationName = "sblt-pooling-baseline"
+beam.agentsim.simulationName = "smart-b-lowtech-pooling/sblt-pooling-baseline"
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.025
 beam.agentsim.schedulerParallelismWindow = 300
 beam.agentsim.lastIteration = 0
