--- a/production/sfbay/smart/smart-baseline.conf
+++ b/production/sfbay/smart/smart-baseline.conf
@@ -10,7 +10,7 @@ include "../../common/matsim.conf"
 ##################################################################
 # Agentsim
 ##################################################################
-beam.agentsim.simulationName = "sfbay-smart-base"
+beam.agentsim.simulationName = "2018-baseline-calibration"
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.1
 #beam.agentsim.numAgents = 10
 beam.agentsim.firstIteration = 0
@@ -19,6 +19,12 @@ beam.agentsim.schedulerParallelismWindow = 300
 beam.agentsim.thresholdForWalkingInMeters = 100
 beam.agentsim.startTime = "00:00:00"
 beam.agentsim.endTime = "30:00:00"
+
+##################################################################
+# Parking
+##################################################################
+beam.agentsim.agents.parking.maxSearchRadius=20000.0
+
 # MODE CHOICE OPTIONS:
 # ModeChoiceMultinomialLogit ModeChoiceTransitIfAvailable ModeChoiceDriveIfAvailable ModeChoiceRideHailIfAvailable
 # ModeChoiceUniformRandom
@@ -26,14 +32,18 @@ beam.agentsim.agents.modalBehaviors.modeChoiceClass = "ModeChoiceMultinomialLogi
 beam.agentsim.agents.modalBehaviors.defaultValueOfTime = 8.0
 # Modal factors for 'LOW' non-car propensity
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.transfer = -1.4
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.car_intercept = 1.0
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.car_intercept = -1.75
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_transit_intercept = 1.0
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.drive_transit_intercept = -1.75
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_transit_intercept = 0.0
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_intercept = 2.5
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = 0.8
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_intercept = 5.75
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.bike_intercept = -3.0
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.drive_transit_intercept = 3.0
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_transit_intercept = 10.0
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_intercept = 4.75
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = 4.5
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_intercept = 5.5
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.bike_intercept = -7.0
+# Parking
+beam.agentsim.agents.parking.mulitnomialLogit.params.distance_multiplier = 1.0
+beam.agentsim.agents.parking.mulitnomialLogit.params.installed_capacity_multiplier = 0.001
+beam.agentsim.agents.parking.mulitnomialLogit.params.parking_costs_price_multiplier = 4.5
 beam.agentsim.agents.modalBehaviors.modeVotMultiplier.CAV = 0.35 // Does not effect mode choice
 beam.agentsim.agents.modalBehaviors.modeVotMultiplier.bike = 1.0
 beam.agentsim.agents.modalBehaviors.modeVotMultiplier.drive = 1.0
@@ -92,9 +102,9 @@ beam.agentsim.agents.vehicles.enableNewVehicleEnergyConsumptionLogic = true
 beam.agentsim.agents.vehicles.fractionOfInitialVehicleFleet = 1
 #TAZ params
 beam.agentsim.taz.filePath=${beam.inputDirectory}"/../taz-centers.csv"
-beam.agentsim.taz.parkingFilePath = ${beam.inputDirectory}"/../parking/taz-parking-rich-50.csv"
+beam.agentsim.taz.parkingFilePath = ${beam.inputDirectory}"/../parking/taz-parking.csv"
 # Scaling and Tuning Params
-beam.agentsim.tuning.transitCapacity = 0.22080797450913886
+beam.agentsim.tuning.transitCapacity = 0.15
 beam.agentsim.tuning.transitPrice = 1.0
 beam.agentsim.tuning.tollPrice = 1.0
 beam.agentsim.tuning.rideHailPrice = 1.0
@@ -104,8 +114,8 @@ beam.agentsim.populationAdjustment="DEFAULT_ADJUSTMENT"
 # Physsim
 ###########################
 beam.physsim.inputNetworkFilePath = ${beam.inputDirectory}"/../r5-simple-no-local/physsim-network.xml"
-beam.physsim.flowCapacityFactor = 0.11
-beam.physsim.storageCapacityFactor = 0.5
+beam.physsim.flowCapacityFactor = 0.13
+beam.physsim.storageCapacityFactor = 1.75
 beam.physsim.writeMATSimNetwork = true
 beam.physsim.ptSampleSize = 0.03
 beam.physsim.jdeqsim.agentSimPhysSimInterfaceDebugger.enabled = false
@@ -131,10 +141,10 @@ beam.replanning{
 # Warm Mode
 ##################################################################
 beam.warmStart.enabled = false
-#PATH TYPE OPTIONS: PARENT_RUN, ABSOLUTE_PATH
+#PATH TYPE OPTIONS: PARENT_RUNgi, ABSOLUTE_PATH
 #PARENT_RUN: can be a director or zip archive of the output directory (e.g. like what get's stored on S3). We should also be able to specify a URL to an S3 output.
 #ABSOLUTE_PATH: a directory that contains required warm stats files (e.g. linkstats and eventually a plans).
-beam.warmStart.path = "https://s3.us-east-2.amazonaws.com/beam-outputs/sfbay-smart-base__2019-04-01_22-41-19_warmstart.zip"
+beam.warmStart.path = "https://s3.us-east-2.amazonaws.com/beam-outputs/output/sfbay/warmstart/smart-base_without-repos_30iters__2019-07-24_11-06-14-30.zip"
 
 ##################################################################
 # RideHail
@@ -146,21 +156,23 @@ beam.agentsim.agents.rideHail.initialization.initType = "PROCEDURAL"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.name = "RANDOM_ACTIVITY"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.home.radiusInMeters = 500
 beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="conv-L1-inc133-Baseline"
-beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.1 //How many ride hail agents, as a portion of initial total personal vehicles
+beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.05 //How many ride hail agents, as a portion of initial total personal vehicles
 
 # If FILE, use this param
 beam.agentsim.agents.rideHail.initialization.filename=${beam.inputDirectory}"/../rideHailFleet.csv"
-beam.agentsim.agents.rideHail.defaultBaseCost=1.8
-beam.agentsim.agents.rideHail.defaultCostPerMile=0.91
-beam.agentsim.agents.rideHail.defaultCostPerMinute=0.28
-beam.agentsim.agents.rideHail.pooledBaseCost=1.89
-beam.agentsim.agents.rideHail.pooledCostPerMile=1.11
-beam.agentsim.agents.rideHail.pooledCostPerMinute=0.07
+beam.agentsim.agents.rideHail.defaultBaseCost = 4.90
+beam.agentsim.agents.rideHail.defaultCostPerMile = 0.91
+beam.agentsim.agents.rideHail.defaultCostPerMinute = 0.39
+beam.agentsim.agents.rideHail.pooledBaseCost = 4.90
+beam.agentsim.agents.rideHail.pooledCostPerMile = 0.81
+beam.agentsim.agents.rideHail.pooledCostPerMinute = 0.31
 beam.agentsim.agents.rideHail.refuelThresholdInMeters=1000.0
 beam.agentsim.agents.rideHail.rideHailManager.radiusInMeters=5000
 beam.agentsim.agents.rideHail.iterationStats.timeBinSizeInSec=3600
 beam.agentsim.agents.rideHail.refuelLocationType="AtTAZCenter"
 # SurgePricing parameters
+beam.agentsim.agents.rideHail.surgePricing.surgePricingManager = "FileBased"
+beam.agentsim.agents.rideHail.surgePricing.surgePricingFile = ${beam.inputDirectory}"/surgePricingData.csv"
 beam.agentsim.agents.rideHail.surgePricing.surgeLevelAdaptionStep=0.1
 beam.agentsim.agents.rideHail.surgePricing.minimumSurgeLevel=0.1
 # priceAdjustmentStrategy(KEEP_PRICE_LEVEL_FIXED_AT_ONE | CONTINUES_DEMAND_SUPPLY_MATCHING)
@@ -169,10 +181,12 @@ beam.agentsim.agents.rideHail.surgePricing.priceAdjustmentStrategy="KEEP_PRICE_L
 beam.agentsim.agents.rideHail.allocationManager.name="POOLING_ALONSO_MORA"
 beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 301
 # repositioningManager can be DEFAULT_REPOSITIONING_MANAGER | DEMAND_FOLLOWING_REPOSITIONING_MANAGER | REPOSITIONING_LOW_WAITING_TIMES
-beam.agentsim.agents.rideHail.repositioningManager.name="DEFAULT_REPOSITIONING_MANAGER"
+beam.agentsim.agents.rideHail.repositioningManager.name="DEMAND_FOLLOWING_REPOSITIONING_MANAGER"
 beam.agentsim.agents.rideHail.repositioningManager.timeout=300
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.pickupTimeWindowInSec=800
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.dropoffTimeWindowInSec=1600
 # DEMAND_FOLLOWING_REPOSITIONING_MANAGER
-beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemand=0.4
+beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemand=0.44
 beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.numberOfClustersForDemand=30
 # REPOSITIONING_LOW_WAITING_TIMES
 beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.percentageOfVehiclesToReposition=0.01
@@ -233,7 +247,7 @@ kamon {
 beam.outputs.baseOutputDirectory = ${PWD}"/output/sfbay"
 beam.outputs.baseOutputDirectory = ${?BEAM_OUTPUT}
 beam.outputs.addTimestampToOutputDirectory = true
-
+beam.agentsim.agents.parking.maxSearchRadius=20000.0
 # The remaining params customize how events are written to output files
 beam.outputs.events.fileOutputFormats = "csv.gz" # valid options: xml(.gz) , csv(.gz), none - DEFAULT: csv.gz
 
@@ -243,7 +257,7 @@ beam.outputs.stats.binSize = 3600
 
 # To keep all logging params in one place, BEAM overrides MATSim params normally in the controller config module
 beam.outputs.defaultWriteInterval = 10
-beam.outputs.writeSkimsInterval = 1
+beam.outputs.writeSkimsInterval = ${beam.outputs.defaultWriteInterval}
 beam.outputs.writePlansInterval = ${beam.outputs.defaultWriteInterval}
 beam.outputs.writeEventsInterval = ${beam.outputs.defaultWriteInterval}
 beam.physsim.writeEventsInterval = ${beam.outputs.defaultWriteInterval}
