--- a/production/sfbay/smart/smart-baseline.conf
+++ b/production/sfbay/smart/smart-baseline.conf
@@ -183,8 +183,9 @@ beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 
 # repositioningManager can be DEFAULT_REPOSITIONING_MANAGER | DEMAND_FOLLOWING_REPOSITIONING_MANAGER | REPOSITIONING_LOW_WAITING_TIMES
 beam.agentsim.agents.rideHail.repositioningManager.name="DEMAND_FOLLOWING_REPOSITIONING_MANAGER"
 beam.agentsim.agents.rideHail.repositioningManager.timeout=300
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.pickupTimeWindowInSec=800
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.dropoffTimeWindowInSec=1600
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.pickupTimeWindowInSec=300
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.dropoffTimeWindowInSec=600
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxRequestsPerVehicle = 3
 # DEMAND_FOLLOWING_REPOSITIONING_MANAGER
 beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemand=0.01
 beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.numberOfClustersForDemand=30
