remove duplicates from config

--- a/production/sfbay/smart/smart-b-lowtech-pooling/sblt-baseline.conf
+++ b/production/sfbay/smart/smart-b-lowtech-pooling/sblt-baseline.conf
@@ -1,5 +1,5 @@
 
-include "../smart-b-lowtech.conf"
+include "./smart-b-lowtech.conf"
 
 ############# VARIABLES
 beam.agentsim.simulationName = "smart-b-lowtech-pooling/sblt-pooling-baseline"
@@ -13,8 +13,3 @@ beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFrac
 beam.agentsim.agents.rideHail.allocationManager.alonsoMora.solutionSpaceSizePerVehicle = 10
 beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.098
 beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 301
-
-############ CONSTANTS
-beam.beamskimmer.writeObservedSkims = false
-beam.beamskimmer.writeAllModeSkimsForPeakNonPeakPeriods = false
-beam.beamskimmer.writeObservedSkimsPlus = false
