--- a/production/sfbay/smart/smart-b-lowtech-pooling/sblt-baseline-nopooling.conf
+++ b/production/sfbay/smart/smart-b-lowtech-pooling/sblt-baseline-nopooling.conf
@@ -1,7 +1,15 @@
 
-include "./sblt-baseline.conf"
+include "./smart-b-lowtech.conf"
 
 ############# VARIABLES
 beam.agentsim.simulationName = "smart-b-lowtech-pooling/sblt-nopooling-baseline"
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = 0
+beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.025
+beam.agentsim.schedulerParallelismWindow = 300
+beam.agentsim.lastIteration = 15
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = 0.0
 beam.agentsim.agents.rideHail.allocationManager.name="DEFAULT_MANAGER"
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 480
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFraction = 0.20
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.solutionSpaceSizePerVehicle = 10
+beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.098
+beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 301
