--- a/production/sfbay/smart/sblt-baseline-nopooling.conf
+++ b/production/sfbay/smart/sblt-baseline-nopooling.conf
@@ -1,5 +1,5 @@
 ############# VARIABLES
-beam.agentsim.simulationName = "smart-b-lowtech-pooling/sblt-nopooling-baseline"
+beam.agentsim.simulationName = "haitam/smart-b-lowtech-pooling/sblt-nopooling-baseline"
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.025
 beam.agentsim.schedulerParallelismWindow = 300
 beam.agentsim.lastIteration = 15
@@ -21,9 +21,9 @@ beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 
 # environment variables (use directories ending with slash):
 # BEAM_OUTPUTS=/path/to/your/preferred/output/destination/
 
-include "../../../common/akka.conf"
-include "../../../common/metrics.conf"
-include "../../../common/matsim.conf"
+include "../../common/akka.conf"
+include "../../common/metrics.conf"
+include "../../common/matsim.conf"
 
 
 ##################################################################
