--- a/production/sfbay/smart/smart-b-lowtech-pooling/sblt-rpv-low.conf
+++ b/production/sfbay/smart/smart-b-lowtech-pooling/sblt-rpv-low.conf
@@ -1,5 +1,5 @@
 
-include "./sblt-baseline.conf"
+include "../sblt-baseline.conf"
 
 ############# VARIABLES
 beam.agentsim.simulationName = "smart-b-lowtech-pooling/sblt-rpv-low"
