--- a/production/sfbay/smart/sblt-fleet-low.conf
+++ b/production/sfbay/smart/sblt-fleet-low.conf
@@ -1,6 +1,6 @@
 
-include "../sblt-baseline.conf"
+include "sblt-baseline.conf"
 
 ############# VARIABLES
-beam.agentsim.simulationName = "smart-b-lowtech-pooling/sblt-fleet-low"
+beam.agentsim.simulationName = "haitam/smart-b-lowtech-pooling/sblt-fleet-low"
 beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.049
