--- a/production/sfbay/smart/sblt-ttd-high.conf
+++ b/production/sfbay/smart/sblt-ttd-high.conf
@@ -1,6 +1,6 @@
 
-include "../sblt-baseline.conf"
+include "sblt-baseline.conf"
 
 ############# VARIABLES
-beam.agentsim.simulationName = "smart-b-lowtech-pooling/sblt-ttd-high"
+beam.agentsim.simulationName = "haitam/smart-b-lowtech-pooling/sblt-ttd-high"
 beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFraction = 0.25
