--- a/production/sfbay/smart/sblt-wt-low.conf
+++ b/production/sfbay/smart/sblt-wt-low.conf
@@ -1,6 +1,6 @@
 
-include "../sblt-baseline.conf"
+include "sblt-baseline.conf"
 
 ############# VARIABLES
-beam.agentsim.simulationName = "smart-b-lowtech-pooling/sblt-wt-low"
+beam.agentsim.simulationName = "haitam/smart-b-lowtech-pooling/sblt-wt-low"
 beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 240
