--- a/production/sfbay/smart/sblt-baseline-nopooling.conf
+++ b/production/sfbay/smart/sblt-baseline-nopooling.conf
@@ -5,3 +5,4 @@ include "sblt-baseline.conf"
 beam.agentsim.simulationName = "haitam/smart-b-lowtech-pooling/sblt-nopooling-baseline"
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = 0.0
 beam.agentsim.agents.rideHail.allocationManager.name="DEFAULT_MANAGER"
+beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 0
