--- a/production/sfbay/smart/sblt-pooling-high.conf
+++ b/production/sfbay/smart/sblt-pooling-high.conf
@@ -3,6 +3,7 @@ include "sblt-baseline.conf"
 
 ############# VARIABLES
 beam.agentsim.simulationName = "haitam/smart-b-lowtech-pooling/sblt-wt-high"
+beam.agentsim.lastIteration = 0
 beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 480
 beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFraction = 0.45
 beam.agentsim.agents.rideHail.allocationManager.alonsoMora.solutionSpaceSizePerVehicle = 15
