--- a/production/sfbay/smart/sblt-baseline.conf
+++ b/production/sfbay/smart/sblt-baseline.conf
@@ -13,3 +13,7 @@ beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFrac
 beam.agentsim.agents.rideHail.allocationManager.alonsoMora.solutionSpaceSizePerVehicle = 10
 beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.098
 beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 301
+
+beam.beamskimmer.writeObservedSkimsInterval = 15
+beam.beamskimmer.writeAllModeSkimsForPeakNonPeakPeriodsInterval = 15
+beam.beamskimmer.writeObservedSkimsPlusInterval = 15
