--- a/production/sfbay/smart/smart-b-hightech.conf
+++ b/production/sfbay/smart/smart-b-hightech.conf
@@ -9,7 +9,7 @@ include "../../common/matsim.conf"
 include "smart-baseline.conf"
 
 ############# VARIABLES
-beam.agentsim.simulationName = "sfbay-smart-b-ht"
+beam.agentsim.simulationName = "haitam/sfbay-smart-b-ht"
 
 # Modal VOTT factors for DEFAULT scenario
 beam.agentsim.agents.modalBehaviors.modeVotMultiplier.CAV = 0.35 // Does not effect mode choice
