deadheading calibration scenarios

--- a/production/sfbay/smart/smart-b-hightech-lowrep.conf
+++ b/production/sfbay/smart/smart-b-hightech-lowrep.conf
@@ -9,7 +9,9 @@ include "../../common/matsim.conf"
 include "smart-b-hightech.conf"
 
 ############# VARIABLES
-beam.agentsim.simulationName = "haitam/sfbay-smart-b-ht-3xRH"
+beam.agentsim.simulationName = "haitam/deadheading-calibration/sfbay-smart-b-ht-lowrep"
 
-# RIDEHAIL FLEET
-beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.099
+# RIDE-HAIL REPOSITION SENSITIVITY
+beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemand = 1
+
+beam.agentsim.lastIteration = 0
