--- a/production/sfbay/smart/smart-b-hightech-mediumrep.conf
+++ b/production/sfbay/smart/smart-b-hightech-mediumrep.conf
@@ -6,10 +6,12 @@ include "../../common/akka.conf"
 include "../../common/metrics.conf"
 include "../../common/matsim.conf"
 
-include "smart-c-hightech.conf"
+include "smart-b-hightech.conf"
 
 ############# VARIABLES
-beam.agentsim.simulationName = "haitam/sfbay-smart-c-ht-3xRH"
+beam.agentsim.simulationName = "haitam/deadheading-calibration/sfbay-smart-b-ht-mediumrep"
 
-# RIDEHAIL FLEET
-beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.03
+# RIDE-HAIL REPOSITION SENSITIVITY
+beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemand = 2
+
+beam.agentsim.lastIteration = 0
