--- a/production/sfbay/smart/smart-b-lowtech-highrep.conf
+++ b/production/sfbay/smart/smart-b-lowtech-highrep.conf
@@ -6,10 +6,12 @@ include "../../common/akka.conf"
 include "../../common/metrics.conf"
 include "../../common/matsim.conf"
 
-include "smart-b-hightech.conf"
+include "smart-b-lowtech.conf"
 
 ############# VARIABLES
-beam.agentsim.simulationName = "haitam/sfbay-smart-b-ht-2xRH"
+beam.agentsim.simulationName = "haitam/deadheading-calibration/sfbay-smart-b-lt-highrep"
 
-# RIDEHAIL FLEET
-beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.066
+# RIDE-HAIL REPOSITION SENSITIVITY
+beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemand = 3
+
+beam.agentsim.lastIteration = 0
