--- a/production/sfbay/smart/smart-b-lowtech-lowrep.conf
+++ b/production/sfbay/smart/smart-b-lowtech-lowrep.conf
@@ -6,10 +6,12 @@ include "../../common/akka.conf"
 include "../../common/metrics.conf"
 include "../../common/matsim.conf"
 
-include "smart-a-hightech.conf"
+include "smart-b-lowtech.conf"
 
 ############# VARIABLES
-beam.agentsim.simulationName = "haitam/sfbay-smart-a-ht-3xRH"
+beam.agentsim.simulationName = "haitam/deadheading-calibration/sfbay-smart-b-lt-lowrep"
 
-# RIDE-HAIL FLEET
-beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.03
+# RIDE-HAIL REPOSITION SENSITIVITY
+beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemand = 1
+
+beam.agentsim.lastIteration = 0
