--- a/production/sfbay/smart/smart-b-lowtech-wt10.conf
+++ b/production/sfbay/smart/smart-b-lowtech-wt10.conf
@@ -6,12 +6,9 @@ include "../../common/akka.conf"
 include "../../common/metrics.conf"
 include "../../common/matsim.conf"
 
-include "smart-c-hightech.conf"
+include "smart-b-lowtech.conf"
 
 ############# VARIABLES
-beam.agentsim.simulationName = "haitam/deadheading-calibration/sfbay-smart-c-ht-lowrep"
-
-# RIDE-HAIL REPOSITION SENSITIVITY
-beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemand = 1
-
+beam.agentsim.simulationName = "haitam/sfbay-smart-b-lt/wt5"
 beam.agentsim.lastIteration = 0
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 300
