--- a/production/sfbay/smart/smart-b-lowtech-wt15.conf
+++ b/production/sfbay/smart/smart-b-lowtech-wt15.conf
@@ -9,9 +9,6 @@ include "../../common/matsim.conf"
 include "smart-b-lowtech.conf"
 
 ############# VARIABLES
-beam.agentsim.simulationName = "haitam/deadheading-calibration/sfbay-smart-b-lt-highrep"
-
-# RIDE-HAIL REPOSITION SENSITIVITY
-beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemand = 3
-
+beam.agentsim.simulationName = "haitam/sfbay-smart-b-lt/wt5"
 beam.agentsim.lastIteration = 0
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 300
