--- a/production/sfbay/smart/scenarioG.conf
+++ b/production/sfbay/smart/scenarioG.conf
@@ -11,7 +11,7 @@ include "smart-b-hightech.conf"
 ############# VARIABLES
 beam.agentsim.simulationName = "haitam/sfbay-smart-b-ht/scenarioG"
 beam.agentsim.lastIteration = 0
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 540
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFraction= 0.15
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxWaitTimeInSec = 540
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxTravelTimeDelayAsFraction= 0.15
 beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.07
 #wt: 9, td: 0.15, fleet size: 0.07 (sc b-ht)
