--- a/production/sfbay/smart/scenarioJ.conf
+++ b/production/sfbay/smart/scenarioJ.conf
@@ -11,7 +11,7 @@ include "smart-b-hightech.conf"
 ############# VARIABLES
 beam.agentsim.simulationName = "haitam/sfbay-smart-b-ht/scenarioJ"
 beam.agentsim.lastIteration = 0
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 300
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFraction= 0.1
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxWaitTimeInSec = 300
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxTravelTimeDelayAsFraction= 0.1
 beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.06
 #wt: 5, td: 0.1, fleet size: 0.06 (sc b-ht)
