--- a/production/sfbay/smart/smart-b-lowtech-boost-rpv4-3seats.conf
+++ b/production/sfbay/smart/smart-b-lowtech-boost-rpv4-3seats.conf
@@ -13,3 +13,5 @@ beam.agentsim.simulationName = "haitam/sfbay-smart-b-lt-3seats"
 
 # PERSONAL VEHICLE FLEET
 beam.agentsim.agents.vehicles.vehicleTypesFilePath = ${beam.inputDirectory}"/../smart/vehicle-tech/vehicletypes-lowtech-b-3seats.csv"
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.boostRuntime = true
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxSizeOfSolutionSpacePerVehicle = 3
