--- a/production/sfbay/smart/smart-b-lowtech-boost.conf
+++ b/production/sfbay/smart/smart-b-lowtech-boost.conf
@@ -9,6 +9,9 @@ include "../../common/matsim.conf"
 include "smart-b-lowtech.conf"
 
 ############# VARIABLES
-beam.agentsim.simulationName = "haitam/sfbay-smart-b-lt/wt10"
-beam.agentsim.lastIteration = 0
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxWaitTimeInSec = 600
+beam.agentsim.simulationName = "haitam/sfbay-smart-b-lt-rpv4"
+
+# PERSONAL VEHICLE FLEET
+beam.agentsim.agents.vehicles.vehicleTypesFilePath = ${beam.inputDirectory}"/../smart/vehicle-tech/vehicletypes-lowtech-b.csv"
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.boostRuntime = true
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxSizeOfSolutionSpacePerVehicle = 5
