--- a/production/sfbay/smart/sblt-baseline.conf
+++ b/production/sfbay/smart/sblt-baseline.conf
@@ -8,9 +8,9 @@ beam.agentsim.schedulerParallelismWindow = 300
 beam.agentsim.lastIteration = 15
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = 0.8
 beam.agentsim.agents.rideHail.allocationManager.name="POOLING_ALONSO_MORA"
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 480
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFraction = 0.20
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.solutionSpaceSizePerVehicle = 10
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxWaitTimeInSec = 480
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxTravelTimeDelayAsFraction = 0.20
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxSizeOfSolutionSpacePerVehicle = 10
 beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.098
 beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 301
 
