--- a/production/sfbay/smart/sblt-pooling-high.conf
+++ b/production/sfbay/smart/sblt-pooling-high.conf
@@ -4,6 +4,6 @@ include "sblt-baseline.conf"
 ############# VARIABLES
 beam.agentsim.simulationName = "haitam/smart-b-lowtech-pooling/sblt-pooling-high1"
 beam.agentsim.lastIteration = 0
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 720
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFraction = 0.65
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.solutionSpaceSizePerVehicle = 20
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxWaitTimeInSec = 720
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxTravelTimeDelayAsFraction = 0.65
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxSizeOfSolutionSpacePerVehicle = 20
