--- a/production/sfbay/smart/sblt-wt-low.conf
+++ b/production/sfbay/smart/sblt-wt-low.conf
@@ -3,4 +3,4 @@ include "sblt-baseline.conf"
 
 ############# VARIABLES
 beam.agentsim.simulationName = "haitam/smart-b-lowtech-pooling/sblt-wt-low"
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 240
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxWaitTimeInSec = 240
