--- a/production/sfbay/smart/scenarioB.conf
+++ b/production/sfbay/smart/scenarioB.conf
@@ -11,7 +11,7 @@ include "smart-b-hightech.conf"
 ############# VARIABLES
 beam.agentsim.simulationName = "haitam/sfbay-smart-b-ht/scenarioB"
 beam.agentsim.lastIteration = 0
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 600
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFraction= 0.3
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxWaitTimeInSec = 600
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxTravelTimeDelayAsFraction= 0.3
 beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.066
 #wt: 10, td: 0.3, fleet size: 0.06 (sc b-ht)
