--- a/production/sfbay/smart/scenarioH.conf
+++ b/production/sfbay/smart/scenarioH.conf
@@ -11,7 +11,7 @@ include "smart-b-hightech.conf"
 ############# VARIABLES
 beam.agentsim.simulationName = "haitam/sfbay-smart-b-ht/scenarioH"
 beam.agentsim.lastIteration = 0
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 480
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFraction= 0.1
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxWaitTimeInSec = 480
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxTravelTimeDelayAsFraction= 0.1
 beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.09
 #wt: 8, td: 0.1, fleet size: 0.09 (sc b-ht)
