--- a/production/sfbay/smart/smart-b-lowtech-wt15.conf
+++ b/production/sfbay/smart/smart-b-lowtech-wt15.conf
@@ -11,4 +11,4 @@ include "smart-b-lowtech.conf"
 ############# VARIABLES
 beam.agentsim.simulationName = "haitam/sfbay-smart-b-lt/wt15"
 beam.agentsim.lastIteration = 0
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 900
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxWaitTimeInSec = 900
