--- a/production/sfbay/smart/smart-baseline.conf
+++ b/production/sfbay/smart/smart-baseline.conf
@@ -262,6 +262,7 @@ beam.beamskimmer.writeObservedSkimsInterval = ${beam.outputs.defaultWriteInterva
 beam.beamskimmer.writeAllModeSkimsForPeakNonPeakPeriodsInterval = 0
 beam.beamskimmer.writeObservedSkimsPlusInterval = ${beam.outputs.defaultWriteInterval}
 beam.beamskimmer.writeFullSkimsInterval = 0
+beam.beamskimmer.collectFullCarSkimsInterval = 2
 beam.outputs.writePlansInterval = ${beam.outputs.defaultWriteInterval}
 beam.outputs.writeEventsInterval = ${beam.outputs.defaultWriteInterval}
 beam.physsim.writeEventsInterval = 10
