increase iters for a-ht and b-lt

--- a/production/sfbay/smart/smart-a-hightech-2025.conf
+++ b/production/sfbay/smart/smart-a-hightech-2025.conf
@@ -11,5 +11,6 @@ include "smart-pilates.conf"
 
 ############# VARIABLES
 beam.agentsim.simulationName = "sfbay-smart-a-ht-2025"
+beam.agentsim.lastIteration = 15
 beam.exchange.scenario.folder="https://s3.us-east-2.amazonaws.com/beam-outputs/pilates-outputs/15thSep2019/a_ht/urbansim/12September2019/a_ht/2025/"
 
