--- a/production/sfbay/smart/smart-b-lowtech-2040.conf
+++ b/production/sfbay/smart/smart-b-lowtech-2040.conf
@@ -11,4 +11,5 @@ include "smart-pilates.conf"
 
 ############# VARIABLES
 beam.agentsim.simulationName = "sfbay-smart-b-lt-2040"
+beam.agentsim.lastIteration = 15
 beam.exchange.scenario.folder="https://s3.us-east-2.amazonaws.com/beam-outputs/pilates-outputs/15thSep2019/b_lt/urbansim/13September2019/b_lt/2040/"
