--- a/production/sfbay/smart/pooling-rpv-low.conf
+++ b/production/sfbay/smart/pooling-rpv-low.conf
@@ -1,5 +1,5 @@
 
-include "sblt-baseline.conf"
+include "pooling-base.conf"
 
 ############# VARIABLES
 beam.agentsim.simulationName = "haitam/smart-b-lowtech-pooling/sblt-rpv-low"
