--- a/production/sfbay/smart/pooling-base.conf
+++ b/production/sfbay/smart/pooling-base.conf
@@ -1,5 +1,5 @@
 
-include "smart-b-lowtech.conf"
+include "smart-b-lowtech-2040.conf"
 
 ############# VARIABLES
 beam.agentsim.simulationName = "haitam/smart-b-lowtech-pooling-recovered/pooling-base"
