--- a/gradle.deploy.properties
+++ b/gradle.deploy.properties
@@ -1,6 +1,6 @@
-runName=art/b-ht-2040-repos-0.5-real-one
+runName=art/b-ht-2040-repos-new-dfr-3.0
 beamBranch=rw/prod-rh-repositioning-test-runs
-beamCommit=325e65bc35e8fa408988fe9d494f3eea1cb70f6b
+beamCommit=9b028ce88310d45b0a0f68e651275db61832028c
 beamConfigs=production/sfbay/smart/smart-b-hightech-2040.conf
 instanceType=m5d.24xlarge
 
