--- a/production/sfbay/smart/smart-b-lowtech-2040-pooling-base.conf
+++ b/production/sfbay/smart/smart-b-lowtech-2040-pooling-base.conf
@@ -17,3 +17,9 @@ beam.agentsim.agents.rideHail.allocationManager.alonsoMora.solutionSpaceSizePerV
 beam.beamskimmer.writeObservedSkimsInterval = 5
 beam.beamskimmer.writeAllModeSkimsForPeakNonPeakPeriodsInterval = 0
 beam.beamskimmer.writeObservedSkimsPlusInterval = 5
+
+beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.horizon = 600
+beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemand = 12.0
+beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemandForCAVs = 6.0
+beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.numberOfClustersForDemand = 30
+beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.fractionOfClosestClustersToConsider = 0.2
