update the paths to vehicle types and fleet files

--- a/production/sfbay/smart/smart-baseline-new.conf
+++ b/production/sfbay/smart/smart-baseline-new.conf
@@ -85,7 +85,7 @@ beam.exchange.scenario {
 beam.agentsim.agents.population.useVehicleSampling = true
 beam.agentsim.agents.vehicles.vehicleAdjustmentMethod = "INCOME_BASED"
 beam.agentsim.agents.vehicles.fuelTypesFilePath = ${beam.inputDirectory}"/../samples/fuelTypes.csv"
-beam.agentsim.agents.vehicles.vehicleTypesFilePath = ${beam.inputDirectory}"/../smart/vehicle-tech/vehicletypes-baseline.csv"
+beam.agentsim.agents.vehicles.vehicleTypesFilePath = ${beam.inputDirectory}"/../smart/vehicle-tech/vehicletypes-baseline-new.csv"
 beam.agentsim.agents.vehicles.vehiclesFilePath = ${beam.inputDirectory}"/../samples/vehicles-cavs.csv.gz"
 beam.agentsim.agents.vehicles.sharedFleets = []
 beam.agentsim.agents.vehicles.fractionOfInitialVehicleFleet = 0.98
@@ -153,7 +153,7 @@ beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicle
 beam.agentsim.agents.rideHail.initialization.parking.filePath = ${beam.inputDirectory}"/../parking/depot-parking-unlimited-150.csv"
 
 # If FILE, use this param
-beam.agentsim.agents.rideHail.initialization.filePath="/home/ubuntu/beam/output/sfbay/sfbay-smart-base__2019-08-24_21-43-37/ITERS/it.18/18.rideHailFleet.csv"
+beam.agentsim.agents.rideHail.initialization.filePath=${beam.inputDirectory}"/ridehail-fleet-new.csv"
 beam.agentsim.agents.rideHail.defaultBaseCost=1.8
 beam.agentsim.agents.rideHail.defaultCostPerMile=0.91
 beam.agentsim.agents.rideHail.defaultCostPerMinute=0.28
