--- a/gradle.deploy.properties
+++ b/gradle.deploy.properties
@@ -1,8 +1,8 @@
-runName=BEAM
-beamBranch=develop
-beamCommit=HEAD
-beamConfigs=test/input/sf-light/sf-light-25k.conf
-instanceType=t2.small
+runName=bl/prod-dev/geofence-run-6
+beamBranch=bl/#ridehail-geofence-issue
+beamCommit=9a6ffe1a45b872c18dd9285203de7391a60bb39a
+beamConfigs=production/sfbay/smart/smart-baseline-new.conf
+instanceType=m5d.24xlarge
 
 #c5.9xlarge (36/141)    -> 5 instances -> $1.53 per Hour
 #m4.10xlarge (40/160)   -> 5 -> $2.00 per Hour
