add r5 coordinate conversion for geo fence coordinates

--- a/test/input/sf-light/sf-light.conf
+++ b/test/input/sf-light/sf-light.conf
@@ -106,13 +106,14 @@ beam.warmStart.path = "https://s3.us-east-2.amazonaws.com/beam-outputs/run149-ba
 # RideHail
 ##################################################################
 # Initialization Type(PROCEDURAL | FILE)
-beam.agentsim.agents.rideHail.initialization.initType = "PROCEDURAL"
+beam.agentsim.agents.rideHail.initialization.initType = "FILE"
 # If PROCEDURAL, use these params
 # initialization.procedural.initialLocation.name(INITIAL_RIDE_HAIL_LOCATION_HOME | INITIAL_RIDE_HAIL_LOCATION_UNIFORM_RANDOM | INITIAL_RIDE_HAIL_LOCATION_ALL_AT_CENTER | INITIAL_RIDE_HAIL_LOCATION_ALL_IN_CORNER)
-beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.name = "HOME"
+beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.name = "RANDOM_ACTIVITY"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.home.radiusInMeters = 500
 beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="Car"
 beam.agentsim.agents.rideHail.initialization.procedural.numDriversAsFractionOfPopulation=0.5
+beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.01
 # If FILE, use this param
 beam.agentsim.agents.rideHail.initialization.filePath=${beam.inputDirectory}"/rideHailFleet-fenced.csv"
 # Ride Hailing General Params
@@ -122,9 +123,10 @@ beam.agentsim.agents.rideHail.defaultCostPerMinute=0.28
 beam.agentsim.agents.rideHail.pooledBaseCost=1.89
 beam.agentsim.agents.rideHail.pooledCostPerMile=1.11
 beam.agentsim.agents.rideHail.pooledCostPerMinute=0.07
-beam.agentsim.agents.rideHail.refuelThresholdInMeters=20000.0
-beam.agentsim.agents.rideHail.rideHailManager.radiusInMeters=10000
+beam.agentsim.agents.rideHail.refuelThresholdInMeters=1000.0
+beam.agentsim.agents.rideHail.rideHailManager.radiusInMeters=5000
 beam.agentsim.agents.rideHail.iterationStats.timeBinSizeInSec=3600
+beam.agentsim.agents.rideHail.refuelLocationType="AtTAZCenter"
 # SurgePricing parameters
 beam.agentsim.agents.rideHail.surgePricing.surgeLevelAdaptionStep=0.1
 beam.agentsim.agents.rideHail.surgePricing.minimumSurgeLevel=0.1
@@ -132,13 +134,15 @@ beam.agentsim.agents.rideHail.surgePricing.minimumSurgeLevel=0.1
 beam.agentsim.agents.rideHail.surgePricing.priceAdjustmentStrategy="KEEP_PRICE_LEVEL_FIXED_AT_ONE"
 # allocationManager(DEFAULT_MANAGER | STANFORD_V1 | BUFFERED_IMPL_TEMPLATE)
 beam.agentsim.agents.rideHail.allocationManager.name="POOLING_ALONSO_MORA"
-beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 200
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 1200
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFraction= 0.5
+beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 301
 # repositioningManager can be DEFAULT_REPOSITIONING_MANAGER | DEMAND_FOLLOWING_REPOSITIONING_MANAGER | REPOSITIONING_LOW_WAITING_TIMES
 beam.agentsim.agents.rideHail.repositioningManager.name="DEFAULT_REPOSITIONING_MANAGER"
 beam.agentsim.agents.rideHail.repositioningManager.timeout=300
 # DEMAND_FOLLOWING_REPOSITIONING_MANAGER
-beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemand=1
-beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.numberOfClustersForDemand=30
+beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemand=3.75
+beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.numberOfClustersForDemand=0.2
 # REPOSITIONING_LOW_WAITING_TIMES
 beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.percentageOfVehiclesToReposition=0.01
 beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.timeWindowSizeInSecForDecidingAboutRepositioning=1200
