--- a/test/input/sf-light/sf-light-1k.conf
+++ b/test/input/sf-light/sf-light-1k.conf
@@ -113,7 +113,7 @@ beam.warmStart.path = "https://s3.us-east-2.amazonaws.com/beam-outputs/run149-ba
 # RideHail
 ##################################################################
 # Initialization Type(PROCEDURAL | FILE)
-beam.agentsim.agents.rideHail.initialization.initType = "PROCEDURAL"
+beam.agentsim.agents.rideHail.initialization.initType = "FILE"
 # If PROCEDURAL, use these params
 # initialization.procedural.initialLocation.name(INITIAL_RIDE_HAIL_LOCATION_HOME | INITIAL_RIDE_HAIL_LOCATION_UNIFORM_RANDOM | INITIAL_RIDE_HAIL_LOCATION_ALL_AT_CENTER | INITIAL_RIDE_HAIL_LOCATION_ALL_IN_CORNER)
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.name = "HOME"
@@ -141,7 +141,7 @@ beam.agentsim.agents.rideHail.surgePricing.priceAdjustmentStrategy="KEEP_PRICE_L
 beam.agentsim.agents.rideHail.allocationManager.name="POOLING_ALONSO_MORA"
 beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 200
 # repositioningManager can be DEFAULT_REPOSITIONING_MANAGER | DEMAND_FOLLOWING_REPOSITIONING_MANAGER | REPOSITIONING_LOW_WAITING_TIMES
-beam.agentsim.agents.rideHail.repositioningManager.name="DEFAULT_REPOSITIONING_MANAGER"
+beam.agentsim.agents.rideHail.repositioningManager.name="DEMAND_FOLLOWING_REPOSITIONING_MANAGER"
 beam.agentsim.agents.rideHail.repositioningManager.timeout=300
 # DEMAND_FOLLOWING_REPOSITIONING_MANAGER
 beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemand=1
