fix alonsoMora params

--- a/src/main/resources/beam-template.conf
+++ b/src/main/resources/beam-template.conf
@@ -155,7 +155,7 @@ beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.waitin
 beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.demandWeight = "double | 4.0"
 beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.produceDebugImages = true
 beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = "int | 360"
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.excessRideTimeAsFraction= "double | 0.2"
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.excessRideTimeAsFraction = "double | 0.2"
 beam.agentsim.agents.rideHail.allocationManager.alonsoMora.numRequestsPerVehicle = "int | 5"
 beam.agentsim.agents.rideHail.pooledToRegularRideCostRatio = 0.6
 
