--- a/production/sfbay/smart/smart-baseline.conf
+++ b/production/sfbay/smart/smart-baseline.conf
@@ -203,6 +203,27 @@ beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.waitin
 beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.demandWeight=4.0
 beam.agentsim.agents.rideHail.allocationManager.repositionLowWaitingTimes.produceDebugImages=true
 
+# SKIM
+beam.router.skim = {
+  keepKLatestSkims = 1
+  writeSkimsInterval = 5
+  writeAggregatedSkimsInterval = 5
+  drive-time-skimmer {
+    name = "drive-time-skimmer"
+    fileBaseName = "skimsTravelTimeObservedVsSimulated"
+  }
+  origin-destination-skimmer {
+    name = "od-skimmer"
+    fileBaseName = "skimsOD"
+    writeAllModeSkimsForPeakNonPeakPeriodsInterval = 0
+    writeFullSkimsInterval = 0
+  }
+  taz-skimmer {
+    name = "taz-skimmer"
+    fileBaseName = "skimsTAZ"
+  }
+}
+
 ##################################################################
 # Metrics
 ##################################################################
