adding properties file

--- a/gradle.deploy.properties
+++ b/gradle.deploy.properties
@@ -1,8 +1,8 @@
-runName=BEAM
-beamBranch=develop
-beamCommit=HEAD
-beamConfigs=test/input/sf-light/sf-light-25k.conf
-instanceType=t2.small
+runName=rw/#2223-prod-dev-updated-rh-fix
+beamBranch=rw/#2223-prod-dev-updated-rh-fix
+beamCommit=fb0a6761342c2b934638416be9d4101dec66effa
+beamConfigs=production/sfbay/smart/smart-baseline-2010.conf
+instanceType=c5.18xlarge
 
 #c5.9xlarge (36/141)    -> 5 instances -> $1.53 per Hour
 #m4.10xlarge (40/160)   -> 5 -> $2.00 per Hour
