--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ apply plugin: 'scalafmt'
 apply plugin: 'com.bmuschko.docker-java-application'
 
 group = 'beam'
-version = '0.8.0'
+version = '0.8.5'
 
 description = """"""
 
@@ -225,6 +225,7 @@ dependencies {
     compile "com.github.vagmcs:optimus-solver-oj_${scalaBinaryVersion}:3.1.0"
 
     compile group: 'io.github.oliviercailloux', name: 'google-or-tools', version: '6.7.2'
+    //compile fileTree(include: ['*'], dir: 'lib')
 
     ////////////////////////////////////
     ///Performance Monitoring (Kamon)///
@@ -436,15 +437,10 @@ def jfrWithMem = ["-XX:+UnlockCommercialFeatures", "-XX:+UnlockDiagnosticVMOptio
                   "-XX:StartFlightRecording=delay=2s,duration=60m,name=mem_ex,filename=recording.jfr,settings=profile_heap_exception",
                   "-XX:+FlightRecorder", "-XX:FlightRecorderOptions=disk=true,maxage=10h,dumponexit=true,loglevel=info"]
 
-
-def jmx = ["-Dcom.sun.management.jmxremote", "-Dcom.sun.management.jmxremote.port=9005", "-Dcom.sun.management.jmxremote.host=127.0.0.1",
-           "-Dcom.sun.management.jmxremote.local.only=true", "-Dcom.sun.management.jmxremote.authenticate=false", "-Dcom.sun.management.jmxremote.ssl=false",
-           "-Djava.net.preferIPv4Stack=true", "-Djava.rmi.server.hostname=127.0.0.1"]
-
 // UseParallelGC
 applicationDefaultJvmArgs = ["-Xmx${myAvailableRam}g", "-Xms${myAvailableRam/2}g",
                              "-XX:+UseParallelGC", "-XX:+UseParallelOldGC", "-XX:MetaspaceSize=150M", "-Djava.awt.headless=true",
-                             "-Dlogback.configurationFile=logback_prod.xml"] + logGC + jmx
+                             "-Dlogback.configurationFile=logback_prod.xml", "-Djava.library.path=lib"] + logGC
 
 println(applicationDefaultJvmArgs)
 
@@ -544,14 +540,14 @@ docker{
     }
 
     javaApplication {
-        baseImage = 'continuumio/miniconda3'
+        baseImage = 'beammodel/miniconda3'
         maintainer = 'LBNL Beam Team'
         tag = "beammodel/beam:$version"
     }
 }
 
 dockerDistTar {
-    instruction 'RUN apt-get update && apt-get -y install openjdk-8-jdk && rm -rf /var/lib/apt/lists/*'
+    instruction 'RUN apt-get update'
     addFile 'test/', 'test/'
 }
 
